# gtk-ci-test

./: .gitmodules  CMakeLists.txt  main.cpp
.github/workflows/: ci.yml
cmake/: Findgdkmm.cmake  Findgtk.cmake  Findgtkmm.cmake
